# llm_domain_classification

./: .gitignore  CLAUDE.md  README.md  TODO.md
.cursor/rules/: frontend.mdc  project_overview.mdc
.github/workflows/: deploy-pages.yml
backend/: CLAUDE.md  README.md  pyproject.toml
backend/llmdomainrating/: pyproject.toml
backend/llmdomainrating/src/llmdomainrating/: __init__.py  api.py  prices.py  prompts.py  utils.py
backend/notebooks/: calcualte_price.ipynb  domain_alive.ipynb  explore_claude.ipynb  explore_google.ipynb  explore_openai.ipynb  explore_together.ipynb  explore_xai.ipynb
backend/scripts/anthropic/: commands.sh  parse_anthropic.py
backend/scripts/google/: commands.sh  parse_google.py
backend/scripts/openai/: commands.sh  commands_reasoning.sh  extract_ratings.py  parse_openai.py  query_openai.py  reconcile_extracted_ratings.py
backend/scripts/processing/: commands.sh  gen_stats.py  update_frontend.sh
backend/scripts/together/: commands.sh  parse_together.py
backend/scripts/xai/: commands.sh  parse_xai.py
data/processed/: DeepSeek-R1.json  DeepSeek-V3.json  Llama-3.3-70B-Instruct-Turbo.json  Llama-4-Maverick-17B-128E-Instruct-FP8.json  Llama-4-Scout-17B-16E-Instruct.json  README.md  claude-3-5-haiku-20241022.json  claude-3-5-sonnet-20241022.json  claude-3-7-sonnet-20250219.json  gemini-1.5-flash-001.json  gemini-1.5-pro-001.json  gemini-2.0-flash-001.json  gemini-2.0-flash-lite-001.json  gpt-3.5-turbo-1106.json  gpt-4-turbo-2024-04-09.json  (+15 more)
frontend/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
(+16 files in other folders)
