[project]
name = "llmdomainrating"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kaicheng Yang", email = "yang3kc@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
